# PyWEB_homework_mod_5

./: README.md  main.py  pyproject.toml  result.json
